# Mlops-Projects

FastAPI-Model_Serving/: README.md
MLflow-Experiment_Tracking/: README.md
ZenML-Project/: .dockerignore  .gitignore  EDA.ipynb  README.md  client.py  config.yaml  dockerfile  features.json  main.py  pyproject.toml  requirements.txt  run_deployment.py  run_pipeline.py  sample_predict.py  test.py  unique_values.json
ZenML-Project/analysis/: EDA.ipynb
ZenML-Project/artifacts/: feature_strategy.pkl  year_scaler.pkl
ZenML-Project/pipelines/: deployment_pipeline.py  training_pipeline.py
ZenML-Project/piplines/: training_pipline.py
ZenML-Project/src/: data_cleaning.py  feature_engineering.py  model_building.py  model_evaluator.py  outlier_detection.py
ZenML-Project/steps/: clean_data.py  data_ingestion_step.py  data_preprocessor.py  data_splitter_step.py  dynamic_importer.py  evaluation.py  feature_engineering_step.py  handle_missing_values_step.py  ingest_data.py  model_building_step.py  model_evaluator_step.py  model_loader.py  model_train.py  outlier_detection_step.py  prediction_service_loader.py  predictor.py
